[project]
name = "adkagents"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "google-adk>=1.29.0",
    "rich>=13.0.0",
    "pandas>=2.0.0",
    "google-cloud-firestore>=2.26.0",
    "fastapi",
    "uvicorn",
]

[project.scripts]
setup-env = "setup_env:main"
tf = "deploy.tf_run:main"
tf-deploy = "deploy.tf_deploy:main"
obliterate = "deploy.obliterate:main"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["bank_agent", "deploy", "setup_env.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
